// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationPage header component should be rendered correctly provided app 1`] = `
<div
  className="sto-app-header"
>
  <div
    className="sto-app-header-icon"
  >
    <AppIcon
      app={
        Object {
          "editor": "Cozy",
          "label": 1,
          "manifest": Object {
            "categories": Array [
              "cozy",
            ],
            "developer": Object {
              "name": "Cozy",
              "url": "https://cozy.io",
            },
            "editor": "Cozy",
            "icon": "https://mockcozy.cc/registry/photos/3.0.0/icon.svg",
            "langs": Array [
              "en",
              "fr",
            ],
            "licence": "AGPL-3.0",
            "locales": Object {
              "en": Object {
                "changes": "### NEW!!!

 Now on the cozy-store :tada",
                "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
              "fr": Object {
                "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
                "short_description": "Gestionnaire de photos pour Cozy v3",
              },
            },
            "name": "Photos",
            "name_prefix": "Cozy",
            "permissions": Object {
              "albums": Object {
                "description": "Required to manage photos albums",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.photos.albums",
              },
              "apps": Object {
                "description": "Required by the cozy-bar to display the icons of the apps",
                "type": "io.cozy.apps",
                "verbs": Array [
                  "GET",
                ],
              },
              "contacts": Object {
                "description": "Required to to share photos with your contacts",
                "methods": Array [
                  "GET",
                  "POST",
                ],
                "type": "io.cozy.contacts",
              },
              "files": Object {
                "description": "Required for photo access",
                "methods": Array [
                  "GET",
                  "POST",
                  "PUT",
                ],
                "type": "io.cozy.files",
              },
              "settings": Object {
                "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
                "type": "io.cozy.settings",
                "verbs": Array [
                  "GET",
                ],
              },
            },
            "platforms": Array [
              Object {
                "type": "ios",
                "url": "",
              },
              Object {
                "type": "linux",
                "url": "",
              },
              Object {
                "type": "android",
                "url": "https://mock.app",
              },
            ],
            "routes": Object {
              "/": Object {
                "folder": "/",
                "index": "index.html",
                "public": false,
              },
              "/public": Object {
                "folder": "/public",
                "index": "index.html",
                "public": true,
              },
            },
            "short_description": "Photos manager for Cozy v3",
            "slug": "photos",
            "source": "https://github.com/cozy/cozy-drive.git@build-photos",
            "type": "webapp",
            "version": "3.0.0",
          },
          "slug": "photos",
          "type": "webapp",
          "version": "3.0.0",
        }
      }
      className="sto-app-icon"
      domain={null}
      secure={false}
    />
  </div>
  <div
    className="sto-app-header-content"
  >
    <h2
      className="sto-app-header-title"
    >
      Cozy undefined
    </h2>
    <p
      className="sto-app-header-description"
    />
    <DefaultButton
      aria-busy={false}
      extension={null}
      icon="test-file-stub"
      label="Install"
      onClick={null}
      tag={[Function]}
      theme="primary"
      to="//myapps/photos/install"
    />
  </div>
</div>
`;

exports[`ApplicationPage header component should be rendered correctly provided app with broken icon and no editor 1`] = `
<div
  className="sto-app-header"
>
  <div
    className="sto-app-header-icon"
  >
    <AppIcon
      app={
        Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
            "url": "https://cozy.io",
          },
          "editor": "",
          "icon": "",
          "langs": Array [
            "en",
            "fr",
          ],
          "licence": "AGPL-3.0",
          "locales": Object {
            "en": Object {
              "changes": "### NEW!!!

 Now on the cozy-store :tada",
              "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
              "short_description": "Gestionnaire de photos pour Cozy v3",
            },
            "fr": Object {
              "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
              "short_description": "Gestionnaire de photos pour Cozy v3",
            },
          },
          "name": "Photos",
          "name_prefix": "Cozy",
          "permissions": Object {
            "albums": Object {
              "description": "Required to manage photos albums",
              "methods": Array [
                "GET",
                "POST",
                "PUT",
              ],
              "type": "io.cozy.photos.albums",
            },
            "apps": Object {
              "description": "Required by the cozy-bar to display the icons of the apps",
              "type": "io.cozy.apps",
              "verbs": Array [
                "GET",
              ],
            },
            "contacts": Object {
              "description": "Required to to share photos with your contacts",
              "methods": Array [
                "GET",
                "POST",
              ],
              "type": "io.cozy.contacts",
            },
            "files": Object {
              "description": "Required for photo access",
              "methods": Array [
                "GET",
                "POST",
                "PUT",
              ],
              "type": "io.cozy.files",
            },
            "settings": Object {
              "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
              "type": "io.cozy.settings",
              "verbs": Array [
                "GET",
              ],
            },
          },
          "platforms": Array [
            Object {
              "type": "ios",
              "url": "",
            },
            Object {
              "type": "linux",
              "url": "",
            },
            Object {
              "type": "android",
              "url": "https://mock.app",
            },
          ],
          "routes": Object {
            "/": Object {
              "folder": "/",
              "index": "index.html",
              "public": false,
            },
            "/public": Object {
              "folder": "/public",
              "index": "index.html",
              "public": true,
            },
          },
          "short_description": "Photos manager for Cozy v3",
          "slug": "photos",
          "source": "https://github.com/cozy/cozy-drive.git@build-photos",
          "type": "webapp",
          "version": "3.0.0",
        }
      }
      className="sto-app-icon"
      domain={null}
      secure={false}
    />
  </div>
  <div
    className="sto-app-header-content"
  >
    <h2
      className="sto-app-header-title"
    >
      Photos
    </h2>
    <p
      className="sto-app-header-description"
    />
    <DefaultButton
      aria-busy={false}
      extension={null}
      icon="test-file-stub"
      label="Install"
      onClick={null}
      tag={[Function]}
      theme="primary"
      to="//myapps/photos/install"
    />
  </div>
</div>
`;

exports[`ApplicationPage header component should be rendered correctly provided konnector 1`] = `
<div
  className="sto-app-header"
>
  <div
    className="sto-app-header-icon"
  >
    <AppIcon
      app={
        Object {
          "editor": "Cozy",
          "label": 1,
          "manifest": Object {
            "categories": Array [
              "transport",
            ],
            "dataType": Array [
              "bill",
            ],
            "developer": Object {
              "name": "Cozy",
              "url": "https://cozy.io",
            },
            "editor": "Cozy",
            "fields": Object {
              "advancedFields": Object {
                "folderPath": Object {
                  "advanced": true,
                  "isRequired": false,
                },
              },
              "login": Object {
                "type": "text",
              },
              "password": Object {
                "type": "password",
              },
            },
            "icon": "https://mockcozy.cc/registry/konnector-trinlane/0.1.0/icon.svg",
            "langs": Array [
              "fr",
              "en",
            ],
            "locales": Object {
              "en": Object {
                "description": "Fetch all your trainline bills",
                "permissions": Object {
                  "accounts": Object {
                    "description": "Required to get the account's data",
                  },
                  "bank operations": Object {
                    "description": "Required to link bills to bank operations",
                  },
                  "bills": Object {
                    "description": "Required to save the bills data",
                  },
                  "files": Object {
                    "description": "Required to save the bills",
                  },
                },
              },
              "fr": Object {
                "description": "Récupère toutes vos factures Trainline",
                "permissions": Object {
                  "accounts": Object {
                    "description": "Utilisé pour obtenir les données du compte",
                  },
                  "bank operations": Object {
                    "description": "Utilisé pour lier vos factures à vos opérations banquaires",
                  },
                  "bills": Object {
                    "description": "Utilisé pour sauvegarder les données de facturation",
                  },
                  "files": Object {
                    "description": "Utilisé pour sauvegarder les factures",
                  },
                },
              },
            },
            "name": "Trinlane",
            "permissions": Object {
              "accounts": Object {
                "description": "Required to get the account's data",
                "type": "io.cozy.accounts",
                "verbs": Array [
                  "GET",
                ],
              },
              "bank operations": Object {
                "description": "Required to link bills to bank operations",
                "type": "io.cozy.bank.operations",
              },
              "bills": Object {
                "description": "Required to save the bills data",
                "type": "io.cozy.bills",
              },
              "files": Object {
                "description": "Required to save the bills",
                "type": "io.cozy.files",
              },
            },
            "short_description": "A konnector for trinlane",
            "slug": "konnector-trinlane",
            "source": "https://github.com/cozy/cozy-konnector-trinlane.git@build",
            "type": "konnector",
            "vendorLink": "www.trinlane.fr",
          },
          "slug": "konnector-trinlane",
          "type": "konnector",
          "version": "0.1.0",
        }
      }
      className="sto-app-icon"
      domain={null}
      secure={false}
    />
  </div>
  <div
    className="sto-app-header-content"
  >
    <h2
      className="sto-app-header-title"
    />
    <p
      className="sto-app-header-description"
    />
    <DefaultButton
      aria-busy={false}
      extension={null}
      icon="test-file-stub"
      label="Install"
      onClick={null}
      tag={[Function]}
      theme="primary"
      to="//myapps/konnector-trinlane/install"
    />
  </div>
</div>
`;

exports[`ApplicationPage header component should display a placeholder if app icon is still fetching 1`] = `
<div
  className="sto-app-header"
>
  <div
    className="sto-app-header-icon"
  >
    <AppIcon
      app={
        Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
            "url": "https://cozy.io",
          },
          "editor": "Cozy",
          "icon": "https://mockcozy.cc/registry/photos/3.0.0/icon.svg",
          "iconToLoad": true,
          "langs": Array [
            "en",
            "fr",
          ],
          "licence": "AGPL-3.0",
          "locales": Object {
            "en": Object {
              "changes": "### NEW!!!

 Now on the cozy-store :tada",
              "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
              "short_description": "Gestionnaire de photos pour Cozy v3",
            },
            "fr": Object {
              "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
              "short_description": "Gestionnaire de photos pour Cozy v3",
            },
          },
          "name": "Photos",
          "name_prefix": "Cozy",
          "permissions": Object {
            "albums": Object {
              "description": "Required to manage photos albums",
              "methods": Array [
                "GET",
                "POST",
                "PUT",
              ],
              "type": "io.cozy.photos.albums",
            },
            "apps": Object {
              "description": "Required by the cozy-bar to display the icons of the apps",
              "type": "io.cozy.apps",
              "verbs": Array [
                "GET",
              ],
            },
            "contacts": Object {
              "description": "Required to to share photos with your contacts",
              "methods": Array [
                "GET",
                "POST",
              ],
              "type": "io.cozy.contacts",
            },
            "files": Object {
              "description": "Required for photo access",
              "methods": Array [
                "GET",
                "POST",
                "PUT",
              ],
              "type": "io.cozy.files",
            },
            "settings": Object {
              "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
              "type": "io.cozy.settings",
              "verbs": Array [
                "GET",
              ],
            },
          },
          "platforms": Array [
            Object {
              "type": "ios",
              "url": "",
            },
            Object {
              "type": "linux",
              "url": "",
            },
            Object {
              "type": "android",
              "url": "https://mock.app",
            },
          ],
          "routes": Object {
            "/": Object {
              "folder": "/",
              "index": "index.html",
              "public": false,
            },
            "/public": Object {
              "folder": "/public",
              "index": "index.html",
              "public": true,
            },
          },
          "short_description": "Photos manager for Cozy v3",
          "slug": "photos",
          "source": "https://github.com/cozy/cozy-drive.git@build-photos",
          "type": "webapp",
          "version": "3.0.0",
        }
      }
      className="sto-app-icon"
      domain={null}
      secure={false}
    />
  </div>
  <div
    className="sto-app-header-content"
  >
    <h2
      className="sto-app-header-title"
    >
      Photos
    </h2>
    <p
      className="sto-app-header-description"
    />
    <DefaultButton
      aria-busy={false}
      extension={null}
      icon="test-file-stub"
      label="Install"
      onClick={null}
      tag={[Function]}
      theme="primary"
      to="//discover/photos/install"
    />
  </div>
</div>
`;
